# jcores

./: .gitignore  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
.github/workflows/: sync.yml
api/: crawlers.py  crud.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/scripts/: backfill.py
app/: globals.css  layout.js  page.js
app/components/: episodes-client.js
scripts/: backfill.py  generate_ddl.py  migrate_to_d1.py  sync.py
