[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudflare>=4.0.0",
    "fastapi[standard]>=0.115.8",
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "loguru>=0.7.3",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "v",
]
