[project]
name = "backend"
version = "0.1.0"
description = "JCores API backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudflare>=4.0.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
